--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
   </head>
   <body>
     <div id="loader">
-      <img src="./logo01.png" alt="loading..." width="100%" />
+      <img src="./logo01.png" alt="" width="100%" />
     </div>
 
     <script type="text/javascript">
