--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Fabrica de pinturas vkolor, Dirección: Esquinas de Miracielos a Hospital, Edificio Sur 2, Planta Baja, Local 14 Caracas, 1010, Distrito Capital. Teléfono: 0212-4849562 "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
